change instagram hover color for topBar

--- a/public/unishop-theme/css/styles.css
+++ b/public/unishop-theme/css/styles.css
@@ -2892,7 +2892,7 @@ button:focus {
 
 /* Instagram */
 .sb-instagram:hover, .sb-instagram:focus {
-    color: #3f729b !important;
+    color: #dc344c !important;
 }
 
 /* LastFM */
